added files from po-bse/.
Mon Dec 15 15:05:15 2003  Tim Janik  <timj@gtk.org>

        * POTFILES.in: added files from po-bse/.

        * *.po: merged with .po file from po-bse/.

svn path=/trunk/; revision=1643

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+Mon Dec 15 15:05:15 2003  Tim Janik  <timj@gtk.org>
+
+	* POTFILES.in: added files from po-bse/.
+
+	* *.po: merged with .po file from po-bse/.
+
 2003-12-14  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po Updated Spanish translation.
