--- a/po/sr.po
+++ b/po/sr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-11 19:08+0100\n"
+"POT-Creation-Date: 2003-12-15 14:12+0100\n"
 "PO-Revision-Date: 2003-12-11 19:13+0100\n"
 "Last-Translator: Данило Шеган <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
@@ -195,6 +195,7 @@ msgid "Input"
 msgstr "Улаз"
 
 #: beast-gtk/bstcanvassource.c:980 beast-gtk/bstsnetrouter.c:197
+#: plugins/artscompressor.idl:38 plugins/artscompressor.idl:56
 msgid "Output"
 msgstr "Излаз"
 
@@ -1399,6 +1400,10 @@ msgstr "_Индекс"
 msgid "_Reload"
 msgstr "Ос_вежи"
 
+#: beast-gtk/gxk/gxkparam-entry.c:56
+msgid "Text Entry"
+msgstr "Унос текста"
+
 #: beast-gtk/gxk/gxkparam-label.c:49
 msgid "Property Name"
 msgstr "Име особине"
@@ -1430,10 +1435,6 @@ msgstr "Вртеће дугме (логаритамско)"
 #: beast-gtk/gxk/gxkparam-toggle.c:69
 msgid "Toggle Button"
 msgstr "Прекидачко дугме"
-
-#: beast-gtk/gxk/gxkparam-entry.c:56
-msgid "Text Entry"
-msgstr "Унос текста"
 
 #: beast-gtk/gxk/gxksimplelabel.c:133
 msgid "The text of the label"
@@ -1502,6 +1503,120 @@ msgstr "Елемент пречице"
 msgid "The widget to be activated when the label's mnemonic key is pressed"
 msgstr "Елемент који се активира када се притисне пречица ознаке"
 
+#: bse/bsebiquadfilter.c:130
+msgid "Filter"
+msgstr "Филтер"
+
+#: bse/bsebiquadfilter.c:132
+msgid "Filter Type"
+msgstr "Врста филтера"
+
+#: bse/bsebiquadfilter.c:132
+msgid "The filter design type"
+msgstr "Врста израде филтера"
+
+#: bse/bsebiquadfilter.c:136 bse/bsebiquadfilter.c:144
+msgid "Center Frequency"
+msgstr "Средишња учестаност"
+
+#: bse/bsebiquadfilter.c:138
+msgid "Cutoff [Hz]"
+msgstr "Исецање [Hz]"
+
+#: bse/bsebiquadfilter.c:146
+msgid "Note"
+msgstr "Напомена"
+
+#: bse/bsebiquadfilter.c:151 bse/bsebiquadfilter.c:156
+msgid "Emphasis"
+msgstr "Нагласак"
+
+#: bse/bsebiquadfilter.c:153
+msgid "Gain [dB]"
+msgstr "Појачање [dB]"
+
+#: bse/bsebiquadfilter.c:158
+msgid "Norm Type"
+msgstr "Врста нормализације"
+
+#: bse/bsebiquadfilter.c:159
+msgid ""
+"The filter gain normalization type (supported only by highpass and lowpass)"
+msgstr ""
+"Врста нормализације појачавања филтера (подржано једино у високом и ниском "
+"пролазу)"
+
+#: bse/bsebiquadfilter.c:164 bse/bsebiquadfilter.c:170
+#: bse/bsebiquadfilter.c:176 bse/bsebiquadfilter.c:182
+msgid "Modulation"
+msgstr "Модулација"
+
+#: bse/bsebiquadfilter.c:167
+msgid "Strength of linear frequency modulation"
+msgstr "Снага линеарне модулације фреквенције"
+
+#: bse/bsebiquadfilter.c:173
+msgid "Perform exponential frequency modulation instead of linear"
+msgstr "Изведи експоненцијалну модулацију фреквенције уместо лиенарне"
+
+#: bse/bsebiquadfilter.c:179
+msgid "Number of octaves to be affected by exponential frequency modulation"
+msgstr "Број октава на које утиче експоненцијална модулација фреквенција"
+
+#: bse/bsebiquadfilter.c:185
+#, no-c-format
+msgid "Gain Modulation [%]"
+msgstr "Појачање модулацијом [%]"
+
+#: bse/bsebiquadfilter.c:186
+msgid "Strength of gain modulation"
+msgstr "Снага појачања модулацијом"
+
+#: bse/bsebiquadfilter.c:190
+msgid "Unfiltered Audio Signal"
+msgstr "Нефилтрирани звучни сигнал"
+
+#: bse/bsebiquadfilter.c:192
+msgid "Center Frequency Input"
+msgstr "Средишњи фреквентни улаз"
+
+#: bse/bsebiquadfilter.c:194
+msgid "Frequency Modulation Input"
+msgstr "Улаз модулације фреквенције"
+
+#: bse/bsebiquadfilter.c:196
+msgid "Gain Modulation Input"
+msgstr "Улаз за појачање модулацијом"
+
+#: bse/bsebiquadfilter.c:198
+msgid "Filtered Audio Signal"
+msgstr "Филтрирани звучни сигнал"
+
+#: bse/bsesuper.c:101
+msgid "Author"
+msgstr ""
+
+#: bse/bsesuper.c:101
+msgid "Person changing or creating this object"
+msgstr ""
+
+#: bse/bsesuper.c:106
+msgid "License"
+msgstr ""
+
+#: bse/bsesuper.c:106
+msgid "Copyright license applying to this object"
+msgstr ""
+
+#: bse/bsesuper.c:114
+msgid "Creation Time"
+msgstr ""
+
+#: bse/bsesuper.c:118
+#, fuzzy
+msgid "Last modification time"
+msgstr "Поравнавање"
+
 #: data/beast.desktop.in.h:1
 msgid "BEAST"
 msgstr "ЗВЕР"
@@ -1526,248 +1641,40 @@ msgstr "BSE вишеделна Wave датотека"
 msgid "BSE Synthesis File"
 msgstr "BSE датотека за синтезу"
 
-#~ msgid "Pos"
-#~ msgstr "Положај"
-
-#~ msgid "Cyria Arweiler"
-#~ msgstr "Сирија Арвајлер (Cyria Arweiler)"
-
-#~ msgid "Tuomas Kuosmanen"
-#~ msgstr "Томас Косманен (Tuomas Kuosmanen)"
-
-#~ msgid "Jakub Steiner"
-#~ msgstr "Јакуб Штајнер (Jakub Steiner)"
-
-# несигурно
-#~ msgid "Ville Pätsi"
-#~ msgstr "Виље Петси (Ville Pätsi)"
-
-#~ msgid "Christian Neumair"
-#~ msgstr "Кристијан Нојмар (Christian Neumair)"
-
-#~ msgid "Sam Hocevar"
-#~ msgstr "Сам Хочевар (Sam Hocevar)"
-
-#~ msgid "Alper Ersoy"
-#~ msgstr "Алпер Ерсој (Alper Ersoy)"
-
-#~ msgid "Ben Collver"
-#~ msgstr "Бен Колвер (Ben Collver)"
-
-#~ msgid "Tim Janik"
-#~ msgstr "Тим Јаник (Tim Janik)"
-
-#~ msgid "Stefan Westerfeld"
-#~ msgstr "Штефан Вестерфелд (Stefan Westerfeld)"
-
-#~ msgid "David A. Bartold"
-#~ msgstr "Дејвид А. Бартолд (David A. Bartold)"
-
-#~ msgid "Metin Amiroff"
-#~ msgstr "Метин Амироф (Metin Amiroff)"
-
-#~ msgid "Alexandre Prokoudine"
-#~ msgstr "Александар Прокоудин"
-
-#~ msgid "Danilo Segan"
-#~ msgstr "Данило Шеган"
-
-#~ msgid "Christian Rose"
-#~ msgstr "Кристијан Роуз (Christian Rose)"
-
-#~ msgid "Miloslav Trmac"
-#~ msgstr "Милослав Трмац"
-
-#~ msgid "Duarte Loreto"
-#~ msgstr "Дуарте Лорето"
-
-#~ msgid "Vincent van Adrighem"
-#~ msgstr "Винсент ван Адригем (Vincent van Adrighem)"
-
-#~ msgid "Xavier Conde Rueda"
-#~ msgstr "Ксавијер Конде Руеда (Xavier Conde Rueda)"
-
-#~ msgid "Kostas Papadimas"
-#~ msgstr "Костас Пападимас"
-
-#~ msgid "_Delete"
-#~ msgstr "_Обриши"
-
-#~ msgid "Align"
-#~ msgstr "Поравнај"
-
-#~ msgid "VSelect"
-#~ msgstr "Усправан избор"
-
-# bug: should this be translated?
-#~ msgid "$action-name"
-#~ msgstr "$action-name"
-
-#~ msgid "/File/_New"
-#~ msgstr "/Датотека/_Нова"
-
-#~ msgid "/File/Preferences..."
-#~ msgstr "/Датотека/_Поставке"
-
-#~ msgid "/_Edit"
-#~ msgstr "/_Уређивање"
-
-#~ msgid "/Edit/Preferences..."
-#~ msgstr "/Уређивање/_Поставке"
-
-#~ msgid "/View/Procedure _Browser"
-#~ msgstr "/Преглед/Раз_гледач процедура"
-
-#~ msgid "/View/Rack Editor"
-#~ msgstr "/Преглед/Уређивач полица"
-
-#~ msgid "/View/Device _Monitor"
-#~ msgstr "/Преглед/Праћење _уређаја"
-
-#~ msgid "/View/Preferences"
-#~ msgstr "/Преглед/Поставке"
-
-#~ msgid "/Project/_Play"
-#~ msgstr "/Пројекат/_Пусти"
-
-#~ msgid "/Project/_Stop"
-#~ msgstr "/Пројекат/_Заустави"
-
-#~ msgid "/Song/Add _Part"
-#~ msgstr "/Песма/Додај д_ео"
-
-#~ msgid "/Song/Delete _Part"
-#~ msgstr "/Песма/_Обриши део"
-
-#~ msgid "/Song/Add _Track"
-#~ msgstr "/Песма/_Додај песму"
-
-#~ msgid "/Song/_Delete Track"
-#~ msgstr "/Песма/_Уклони песму"
-
-#~ msgid "/Synth/_Test"
-#~ msgstr "/Синтетизатор/_Проба"
-
-#~ msgid "/Waves/_Load Wave..."
-#~ msgstr "/Таласи/_Учитај талас..."
-
-#~ msgid "/Waves/Delete Wave"
-#~ msgstr "/Таласи/Обриши талас"
-
-#~ msgid "/Waves/_Edit Wave..."
-#~ msgstr "/Таласи/_Уреди талас..."
-
-#~ msgid "/Synthesizers/Load _Effect"
-#~ msgstr "/Синтетизатори/Учитај _ефекат"
-
-#~ msgid "/Synthesizers/Load _Instrument"
-#~ msgstr "/Синтетизатори/Учитај _инструмент"
-
-#~ msgid "/Synthesizers/Save As Effect"
-#~ msgstr "/Синтетизатори/Сачувај као ефекат"
-
-#~ msgid "/Synthesizers/Save As Instrument"
-#~ msgstr "/Синтетизатори/Сачувај као инструмент"
-
-#~ msgid "/Tools/_Song"
-#~ msgstr "/Алати/_Песма"
-
-#~ msgid "/Tools/_Synth"
-#~ msgstr "/Алати/_Синтетизатор"
-
-#~ msgid "/Tools/Wave_s"
-#~ msgstr "/Алати/_Таласи"
-
-#~ msgid "/Help/Development/GSL Engine..."
-#~ msgstr "/Помоћ/Развој/GSL структура..."
-
-#~ msgid "/Tools/Insert"
-#~ msgstr "/Алати/Уметни"
-
-#~ msgid "/Tools/Delete"
-#~ msgstr "/Алати/Обриши"
-
-#~ msgid "/Tools/Select"
-#~ msgstr "/Алати/Изабери"
-
-#~ msgid "/Tools/Vertical Select"
-#~ msgstr "/Алати/Усправан избор"
-
-#~ msgid "/Edit/Cut"
-#~ msgstr "/Уређивање/Исеци"
-
-#~ msgid "/Edit/Copy"
-#~ msgstr "/Уређивање/Умножи"
-
-#~ msgid "/Edit/Paste"
-#~ msgstr "/Уређивање/Убаци"
-
-#~ msgid "/Edit/Undo"
-#~ msgstr "/Уређивање/Опозови"
-
-#~ msgid "/Edit/Redo"
-#~ msgstr "/Уређивање/Понови"
-
-#~ msgid "/Scripts"
-#~ msgstr "/Скрипте"
-
-#~ msgid "/Test"
-#~ msgstr "/Проба"
-
-#~ msgid "Deleting file `%s'"
-#~ msgstr "Брише датотеку „%s“"
-
-#~ msgid "Number of Columns"
-#~ msgstr "Број колона"
-
-#~ msgid "Array of column types"
-#~ msgstr "Низ врста колона"
-
-#~ msgid "Number of Rows"
-#~ msgstr "Број редова"
-
-#~ msgid "Filter Choice"
-#~ msgstr "Избор филтера"
-
-#~ msgid "Filter Algorithm"
-#~ msgstr "Алгоритам филтрирања"
-
-#~ msgid "The filter design type"
-#~ msgstr "Врста израде филтера"
-
-#~ msgid "Filter Type"
-#~ msgstr "Врста филтера"
-
-#~ msgid "Filter Specification"
-#~ msgstr "Навод филтера"
-
-#~ msgid "Order"
-#~ msgstr "Редослед"
-
-#~ msgid "Order of Filter"
-#~ msgstr "Редослед филтера"
-
-#~ msgid "Epsilon"
-#~ msgstr "Епсилон"
-
-# шта год :-)
-#~ msgid "Passband falloff at cutoff frequency"
-#~ msgstr "Пад пролазне траке на учестаности исецања"
-
-#~ msgid "Cutoff Frequency (All Filters)"
-#~ msgstr "Учестаност исецања (сви филтери)"
-
-#~ msgid "Cutoff [Hz]"
-#~ msgstr "Исецање [Hz]"
-
-#~ msgid "Note"
-#~ msgstr "Напомена"
-
-#~ msgid "Cutoff Frequency 2 (Band Pass/Stop)"
-#~ msgstr "Учестаност исецања 2 (пролаз/заустављање траке)"
-
-#~ msgid "Unfiltered Input"
-#~ msgstr "Нефилтрирани улаз"
-
-#~ msgid "Filtered Output"
-#~ msgstr "Филтрирани улаз"
+#: plugins/artscompressor.idl:34 plugins/artscompressor.idl:52
+msgid "Attack [ms]"
+msgstr ""
+
+#: plugins/artscompressor.idl:34 plugins/artscompressor.idl:52
+msgid "Set the attack time in milli seconds"
+msgstr ""
+
+#: plugins/artscompressor.idl:35 plugins/artscompressor.idl:53
+#, fuzzy
+msgid "Release [ms]"
+msgstr "_Објава издања..."
+
+#: plugins/artscompressor.idl:35 plugins/artscompressor.idl:53
+msgid "Set the release time in milli seconds"
+msgstr ""
+
+#: plugins/artscompressor.idl:36 plugins/artscompressor.idl:54
+msgid "Threshold"
+msgstr ""
+
+#: plugins/artscompressor.idl:36 plugins/artscompressor.idl:54
+msgid "Set the threshold"
+msgstr ""
+
+#: plugins/artscompressor.idl:37 plugins/artscompressor.idl:55
+#, fuzzy
+msgid "Ratio"
+msgstr "Путања"
+
+#: plugins/artscompressor.idl:37 plugins/artscompressor.idl:55
+msgid "Set the compression ratio"
+msgstr ""
+
+#: plugins/artscompressor.idl:38 plugins/artscompressor.idl:56
+msgid "Set the output amplification"
+msgstr ""
