--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,12 @@
+Mon Dec 15 16:00:09 2003  Tim Janik  <timj@gtk.org>
+
+	* evaluator/bseevaluator.idl: 
+	* artscompressor.idl: 
+	* bsebalance.idl:
+	* davchorus.idl: stripped "/Module" prefix from categories as this
+	is auto-prepended by the idl compiler now and shouldn't be translated.
+	completed i18n markup of info strings, streams and parameter groups.
+
 Wed Dec 10 16:30:16 2003  Tim Janik  <timj@gtk.org>
 
 	* davchorus.idl: 
